<resources>
    <string name="app_name">elandmall_kotlin</string>

    <string name="alert_error_occurred">오류가 발생하였습니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="close">닫기</string>
    <string name="more">더보기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="setting">설정</string>
    <string name="category">카테고리</string>
    <string name="brand">브랜드</string>
    <string name="cs">고객센터</string>

    <string name="won">원</string>
    <string name="percent">%</string>

    <!--tools:text-->
    <string name="tools_text_brand_nm">CJ 제일제당</string>
    <string name="tools_text_goods_nm">고메치킨 순살크리스피 550g</string>
    <string name="tools_text_sale_rate">10</string>
    <string name="tools_text_price_before">46,500</string>
    <string name="tools_text_price_after">41,800</string>
    <string name="tools_text_price_final">39,900</string>
    <string name="tools_text_coupon_sale_price">1,900</string>
    <string name="tools_text_review_count">(51)</string>
    <string name="tools_text_quantity">9,999개 구매</string>

    <string name="tools_text_title">TITLE TEXT</string>

    <string name="time_sale">타임세일</string>
    <string name="time_left">남은시간</string>
    <string name="search_other_branch">다른지점 찾기</string>

    <string name="store_shop_empty_pick">매장내 상품정보가 없습니다.</string>
    <string name="store_shop_search">매장찾기</string>
    <string name="store_shop_empty_regular1">등록된 단골매장이 없습니다.</string>
    <string name="store_shop_empty_regular2">단골매장을 등록하면\n해당 매장의 최신 상품을 확인할 수 있습니다.</string>

    <string name="logo_with_color"><font color="#c9000b">Eland</font><font color="#000000">mall</font></string>

    <string name="tools_gnb_title">스토어쇼핑</string>
    <string name="tools_gnb_subtitle">특가세일</string>

    <string name="lnb_login"><u>로그인</u> 해 주세요</string>
    <string name="lnb_logout"><u>로그아웃</u></string>

    <string name="lnb_recently">최근 본 상품</string>
    <string name="lnb_recently_view_all">전체보기 ></string>
    <string name="lnb_search_hint">검색어를 입력해 주세요.</string>
    <string name="lnb_recently_empty">최근 본 상품이 없습니다.</string>
    <string name="lnb_brand_search_hint">브랜드를 찾아 보세요.</string>
    <string name="lnb_shop">추천 전문관</string>
    <string name="lnb_service">서비스 메뉴</string>

    <string name="search_plan_shop">추천 기획전</string>
    <string name="search_more">더보기 ></string>
    <string name="search_brand_count_format">검색결과 총 &lt;font color="#c9000b">%s&lt;/font>건</string>
    <string name="search_brand_top10_title">지금 인기있는 브랜드</string>
    <string name="search_brand_top10_format">&lt;b>%s&lt;/b> %s</string>

    <string name="capture_title">QR/바코드 검색</string>
    <string name="capture_guide">화면 중앙에 위치시키면 자동으로 인식합니다.</string>

    <string name="goods_buy">구매하기</string>
    <string name="goods_price_final">최종 예상 구매가</string>
    <string name="goods_price_before">기본 가격</string>
    <string name="goods_price_after">판매자 즉시 할인</string>
    <string name="goods_price_coupon_sale">쿠폰 최대 할인</string>
    <string name="goods_get_coupon">할인 쿠폰 받기</string>

    <string name="shipping">배송</string>
    <string name="goods_shipping"><b>모든 상품 무료배송!</b></string>
    <string name="point">적립</string>
    <string name="goods_point"><b>빠른페이 </b> 결제 시</string>

    <string name="tag">태그</string>
    <string name="goods_detail_popular">이 판매자의 인기 상품</string>
    <string name="goods_detail_more">상품정보 더보기 ▽</string>
    <string name="goods_qna">Q&amp;A</string>
    <string name="goods_store_info">스토어 정보</string>
    <string name="goods_store_info_name">상호명</string>
    <string name="goods_store_info_ceo">대표자</string>
    <string name="goods_store_info_business_num">사업자번호</string>
    <string name="goods_store_info_commerce_num">통신판매업번호</string>
    <string name="goods_store_info_location">사업장소재지</string>
    <string name="goods_store_cs">스토어 고객센터</string>
    <string name="call">전화하기</string>

    <string name="goods_order_info"> 배송정보\n
                \n
                도서산간 지역은 배송비가 추가비용이 발생할 수 있습니다.\n
                결제 완료 후 1~3일 후 출고됩니다.\n
                교환/환불\n
                \n
                반품 및 교환은 상품 수령 후 7일 이내에 신청하실 수 있습니다.\n
                재화 등의 내용이 표시, 광고의 내용과 다르거나 계약내용과 다르게 이행된 경우에는 전자상거래법 제17조3항에 따라 청약철회를 할 수 있습니다.\n
                교환/환불이 발생하는 경우 그 원인을 제공한 자가 배송비를 부담합니다.\n
                - 고객변심 : 최초 배송비 + 반품 배송비 + (교환의 경우) 교환 배송비는 고객이 부담\n
                - 판매자귀책 : 최초 배송비 + 반품 배송비 + (교환의 경우) 교환 배송비는 판매자가 부담\n
                다음의 경우는 교환 및 환불이 불가능합니다.\n
                - 반품/교환 가능 기간을 초과한 경우\n
                - 상품 및 구성품을 분실하였거나 취급부주의로 인한 오염/파손/고장된 경우\n
                - 상품을 착용하였거나 세탁, 수선한 경우\n
                - 소비자 과실로 인한 옷의 변색(예 : 착생, 화장품 오염 등)\n
                - 착용으로 인한 니트류 상품의 늘어남 발생 및 가죽 제품의 주름 발생\n
                - 명품은 택 제거 후 반품 불가\n
                - 상품의 가치가 현저히 감소하여 재판매가 불가할 경우\n
                - 구매확정된 주문의 경우\n
                - 귀금속류의 경우는 소비자분쟁해결 기준에 의거 교환만 가능합니다.\n
                (단, 함량미달의 경우에는 환불이 가능함)\n
                배송지연, 단순 변심으로 인한 교환/환불은 어렵습니다.\n
                불량은 수령 후 7일 이내에 교환 가능합니다.\n
                상품정보고시\n
                \n
                제조사 : (주)엘에스\n
                제조일자 : 2022-10-13\n
                원산지 : 한국\n
                미성년자 주문취소 안내\n
                \n
                미성년자가 법정대리인의 동의 없이 구매계약을 체결한 경우 미성년자와 법정대리인은 구매계약을 취소할 수 있습니다</string>
</resources>