<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="15dp"
    android:paddingBottom="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/share_row"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#8f8881"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_brand_nm" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/ic_share"
            android:translationX="10dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/goods_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:lineSpacingExtra="-2dp"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/share_row"
        tools:text="@string/tools_text_goods_nm" />

    <TextView
        android:id="@+id/sale_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="#d5a030"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goods_name"
        tools:text="@string/tools_text_sale_rate" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="#d5a030"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/sale_rate"
        app:layout_constraintStart_toEndOf="@id/sale_rate"
        app:layout_constraintTop_toTopOf="@id/sale_rate" />

    <TextView
        android:id="@+id/price_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/percent"
        app:layout_constraintTop_toBottomOf="@id/goods_name"
        tools:text="@string/tools_text_price_after" />

    <TextView
        android:id="@+id/price_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="#bbbbbb"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@id/price_after"
        app:layout_constraintStart_toEndOf="@id/price_after"
        tools:text="@string/tools_text_price_before" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collapsed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_stroke_grey_1dp"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/price_after">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goods_price_final"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/price_final"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d5a030"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/dropdown"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_price_final" />

        <ImageView
            android:id="@+id/dropdown"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_btn_drop_up"
            app:layout_constraintBottom_toBottomOf="@id/price_final"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/price_final" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expanded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_solid_without_top"
        android:paddingHorizontal="15dp"
        android:paddingBottom="15dp"
        android:translationY="-2dp"
        app:layout_constraintTop_toBottomOf="@id/collapsed">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ddd"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/goods_price_before"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/goods_price_after"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price1" />

        <TextView
            android:id="@+id/price3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/goods_price_coupon_sale"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price2" />

        <TextView
            android:id="@+id/price_before_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_price_before" />

        <TextView
            android:id="@+id/price_after_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_before_2"
            tools:text="@string/tools_text_price_after" />

        <TextView
            android:id="@+id/price_coupon_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_after_2"
            tools:text="@string/tools_text_coupon_sale_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/coupon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/expanded"
        app:strokeColor="#ddd"
        app:strokeWidth="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/goods_get_coupon"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:src="@drawable/ic_download" />
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#dddddd"
        app:layout_constraintTop_toBottomOf="@id/coupon_button" />

    <TextView
        android:id="@+id/shipping1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/shipping"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/shipping2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/goods_shipping"
        android:textSize="13dp"
        app:layout_constraintStart_toEndOf="@id/shipping1"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipping1" />

    <TextView
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/goods_point"
        app:layout_constraintStart_toEndOf="@id/point1"
        app:layout_constraintTop_toBottomOf="@id/shipping2" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#e7f1fb"
        android:elevation="0dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@id/point2"
        app:layout_constraintTop_toBottomOf="@id/point2">

        <TextView
            android:id="@+id/point_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColor="#007fff"
            android:textStyle="bold"
            tools:text="1% 적립" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>