<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/goods_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wish"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="6dp"
        android:src="@drawable/selector_wish_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:background="@drawable/background_rank_high"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLength="2"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="01" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingHorizontal="3.67dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/goods_img">

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#8e8e8e"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tools_text_brand_nm" />

        <TextView
            android:id="@+id/goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="2"
            android:maxLines="2"
            android:textColor="#333333"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brand_name"
            tools:text="@string/tools_text_goods_nm" />

        <TextView
            android:id="@+id/sale_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="#c9000b"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/price_after"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/tools_text_sale_rate" />

        <TextView
            android:id="@+id/sale_rate_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="3dp"
            android:text="@string/percent"
            android:textColor="#c9000b"
            android:textSize="17dp"
            app:layout_constraintBaseline_toBaselineOf="@id/sale_rate"
            app:layout_constraintStart_toEndOf="@id/sale_rate" />

        <TextView
            android:id="@+id/price_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#8e8e8e"
            android:textSize="11dp"
            app:layout_constraintBottom_toTopOf="@id/price_after"
            app:layout_constraintStart_toEndOf="@id/sale_rate_percent"
            app:layout_constraintTop_toBottomOf="@id/goods_name"
            tools:text="@string/tools_text_price_before" />

        <TextView
            android:id="@+id/price_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/sale_rate_percent"
            app:layout_constraintTop_toBottomOf="@id/price_before"
            tools:text="@string/tools_text_price_after" />

        <TextView
            android:id="@+id/price_after_won"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/won"
            android:textColor="#333333"
            android:textSize="12dp"
            app:layout_constraintBaseline_toBaselineOf="@id/price_after"
            app:layout_constraintStart_toEndOf="@id/price_after" />

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0.33dp"
            android:layout_marginTop="2dp"
            android:isIndicator="false"
            android:numStars="5"
            android:progressBackgroundTint="#666666"
            android:progressTint="#252525"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:secondaryProgressTint="#00000000"
            android:stepSize="0.1"
            android:transformPivotY="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_after"
            tools:rating="1.1" />

        <TextView
            android:id="@+id/review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:textColor="#3e3e3e"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@id/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rating"
            tools:text="@string/tools_text_review_count" />

        <LinearLayout
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>