<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_stroke_grey_1dp">

    <ImageView
        android:id="@+id/goods_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/teal_700" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goods_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/goods_img">

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:textColor="#777777"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="독보남" />

        <TextView
            android:id="@+id/goods_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#444444"
            android:textSize="11dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brand_name"
            tools:text="[1+1] 20칼라 어깨 넓고 비침없는 베이직 간절기 티셔츠2" />

        <TextView
            android:id="@+id/sale_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#d5a030"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_name"
            tools:text="@string/tools_text_sale_rate" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textColor="#d5a030"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@id/sale_rate"
            app:layout_constraintStart_toEndOf="@id/sale_rate"
            app:layout_constraintTop_toTopOf="@id/sale_rate" />

        <TextView
            android:id="@+id/price_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:textSize="13dp"
            app:layout_constraintStart_toEndOf="@id/percent"
            app:layout_constraintTop_toBottomOf="@id/goods_name"
            tools:text="@string/tools_text_price_after" />

        <TextView
            android:id="@+id/price_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="#bbbbbb"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@id/price_after"
            app:layout_constraintStart_toEndOf="@id/price_after"
            tools:text="@string/tools_text_price_before" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>